# Pytest-BDD-UI-Automation

./: .gitignore  DriverFactory.py  README.md  WebDriverFactory.py  config.toml  conftest.py  docker-compose-arm.yml  docker-compose.yml  pyproject.toml  pytest.ini
pytest_bdd_ui_automation/: config.json  conftest.py
pytest_bdd_ui_automation/features/: dynamic_controls_page.feature
pytest_bdd_ui_automation/pages/: checkboxes.py  dropdown.py  dynamic_controls.py  form_authentication.py  home.py
pytest_bdd_ui_automation/steps/: test_checkboxes_page_steps.py  test_dropdown_page_steps.py  test_dynamic_controls_page_steps.py  test_form_authentication_page_steps.py  test_home_page_steps.py
selenium_grid/: docker-compose-arm.yml
